Second line of footer nav now an UL with zany (yet valid) whitespace-avoidance tactics

--- a/style.css
+++ b/style.css
@@ -358,6 +358,11 @@ div.sidebar li {
 	border-width: 0 1px;
 	margin-left: -1px;
 }
+#ft ul.menu-parent li:first-child { border-left-width: 0; }
+#ft ul.menu-parent li:last-child { border-right-width: 0; }
+#ft #ft-admin {
+	margin: 1.25em 0 0.5em;
+}
 
 /* ============ Colors ============ */
 /*
